add Serilog.Sinks.SQLite sink

--- a/appsettings.json
+++ b/appsettings.json
@@ -28,6 +28,15 @@
           "pathFormat": "Logs\\{Hour}.txt",
           "outputTemplate": "{Timestamp:o} [{Level:u3}] ({MachineName}/{ProcessId}/{ProcessName}/{ThreadId}) {Message}{NewLine}{Exception}"
         }
+      },
+      {
+        "Name": "SQLite",
+        "Args": {
+          "sqliteDbPath": "Logs\\log.db",
+          "tableName": "Logs",
+          "maxDatabaseSize": 1,
+          "rollOver": true
+        }
       }
     ],
     "Enrich": [
